Major refactor of MacOS pkgs into Brewfiles

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
     name = Ícaro Medeiros
-    email = icaro.medeiros@gmail.com
+	email = icarorsmedeiros@icloud.com
 [alias]
     lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 ###
@@ -23,3 +23,8 @@
 [pull]
   rebase = false
   # TODO rehash
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
